--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                                         class="w-32 h-32 bg-gradient-to-r from-teal-500 to-cyan-500 rounded-full mx-auto mb-4 flex items-center justify-center text-5xl">
                                         👨‍💻
                                     </div>
-                                    <span class="text-gray-400">Your Photo Here</span>
+                                    <span class="text-gray-400"></span>
                                 </div>
                             </div>
                         </div>
@@ -244,7 +244,7 @@
                         <div class="text-center p-4 bg-white/5 rounded-xl border border-white/10">
                             <div
                                 class="text-3xl font-bold bg-gradient-to-r from-teal-500 to-cyan-500 bg-clip-text text-transparent">
-                                50+</div>
+                                10+</div>
                             <div class="text-sm text-gray-400 mt-1">Projects</div>
                         </div>
 
