--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Portfolio - Full Stack Developer passionate about creating beautiful and functional web applications">
+        content="Portfolio - Information Technology Student passionate about creating beautiful and functional web applications">
     <title>Portfolio | Taradon</title>
 
     <!-- Tailwind CSS CDN -->
