Change font to Kanit and update contact text

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             theme: {
                 extend: {
                     fontFamily: {
-                        sans: ['Inter', 'sans-serif'],
+                        sans: ['Kanit', 'sans-serif'],
                     },
                     colors: {
                         dark: {
@@ -54,10 +54,9 @@
     </script>
 
     <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
-        rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
     <!-- Custom Styles -->
     <link rel="stylesheet" href="styles.css">
@@ -500,7 +499,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-16 scroll-animate">
                 <span class="inline-block px-4 py-2 bg-teal-400/10 text-teal-300 rounded-full text-sm font-medium mb-4">
-                    ติดต่อฉัน
+                    ติดต่อผม
                 </span>
                 <h2 class="text-3xl md:text-4xl font-bold mb-4">
                     มาทำงานร่วมกัน
@@ -584,41 +583,7 @@
 
                 <!-- Contact Form -->
                 <div class="scroll-animate">
-                    <form id="contact-form" class="space-y-6">
-                        <div class="grid sm:grid-cols-2 gap-6">
-                            <div>
-                                <label for="name" class="block text-sm font-medium mb-2">ชื่อ</label>
-                                <input type="text" id="name" name="name" required
-                                    class="w-full px-4 py-3 bg-dark-900/50 border border-white/10 rounded-xl focus:outline-none focus:border-teal-500 transition-colors"
-                                    placeholder="Your name">
-                            </div>
-                            <div>
-                                <label for="email" class="block text-sm font-medium mb-2">อีเมล</label>
-                                <input type="email" id="email" name="email" required
-                                    class="w-full px-4 py-3 bg-dark-900/50 border border-white/10 rounded-xl focus:outline-none focus:border-teal-500 transition-colors"
-                                    placeholder="your@email.com">
-                            </div>
-                        </div>
-
-                        <div>
-                            <label for="subject" class="block text-sm font-medium mb-2">หัวข้อ</label>
-                            <input type="text" id="subject" name="subject" required
-                                class="w-full px-4 py-3 bg-dark-900/50 border border-white/10 rounded-xl focus:outline-none focus:border-teal-500 transition-colors"
-                                placeholder="Subject">
-                        </div>
-
-                        <div>
-                            <label for="message" class="block text-sm font-medium mb-2">ข้อความ</label>
-                            <textarea id="message" name="message" rows="5" required
-                                class="w-full px-4 py-3 bg-dark-900/50 border border-white/10 rounded-xl focus:outline-none focus:border-teal-500 transition-colors resize-none"
-                                placeholder="Your message..."></textarea>
-                        </div>
-
-                        <button type="submit"
-                            class="w-full py-4 bg-gradient-to-r from-teal-500 to-cyan-500 rounded-xl font-semibold hover:shadow-lg hover:shadow-cyan-500/30 hover:scale-[1.02] transition-all duration-300">
-                            ส่งข้อความ 🚀
-                        </button>
-                    </form>
+                    
                 </div>
             </div>
         </div>
