Update profile section with image and text
Replaced placeholder with image and updated greeting text.

--- a/index.html
+++ b/index.html
@@ -190,15 +190,7 @@
                             class="relative aspect-square rounded-2xl overflow-hidden border border-white/10 bg-dark-800">
                             <!-- Placeholder image with gradient -->
                             <div class="absolute inset-0 bg-gradient-to-br from-teal-500/20 to-cyan-500/20"></div>
-                            <div class="absolute inset-0 flex items-center justify-center">
-                                <div class="text-center">
-                                    <div
-                                        class="w-32 h-32 bg-gradient-to-r from-teal-500 to-cyan-500 rounded-full mx-auto mb-4 flex items-center justify-center text-5xl">
-                                        👨‍💻
-                                    </div>
-                                    <span class="text-gray-400"></span>
-                                </div>
-                            </div>
+                            <img src="taradon.png" alt="Taradon" class="absolute inset-0 w-full h-full object-cover">
                         </div>
                         <!-- Floating badges -->
                         <div
@@ -223,7 +215,7 @@
                         <span class="text-gray-400">ที่รักในการสร้างสรรค์</span>
                     </h2>
                     <p class="text-gray-400 leading-relaxed mb-6">
-                        สวัสดีครับ! ผมกำลังศึกษาในแผนก Information Technology
+                        สวัสดีครับ ผมกำลังศึกษาในแผนก Information Technology
                         ที่มีความหลงใหลในการสร้างเว็บแอปพลิเคชันที่ไม่เพียงแค่สวยงาม
                         แต่ยังใช้งานได้จริงและมอบประสบการณ์ที่ยอดเยี่ยม ผมมีประสบการณ์ในการพัฒนาเว็บมากกว่า 1 ปี
                         และมีความชำนาญในเทคโนโลยีหลากหลาย
