--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
+    <!-- Font Awesome Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
     <!-- Custom Styles -->
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -166,7 +169,7 @@
             </div>
 
             <!-- Scroll Indicator -->
-            <div class="absolute bottom-10 left-1/2 transform -translate-x-1/2 animate-bounce">
+            <div class="fixed bottom-10 left-1/2 transform -translate-x-1/2 animate-bounce z-40">
                 <svg class="w-6 h-6 text-gray-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                         d="M19 14l-7 7m0 0l-7-7m7 7V3"></path>
@@ -262,82 +265,89 @@
 
             <!-- Skill Cards -->
             <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 md:gap-6">
-                <!-- Frontend Skills -->
+                <!-- HTML5 -->
                 <div
                     class="skill-card group p-6 bg-dark-900/50 backdrop-blur border border-white/10 rounded-2xl hover:border-teal-500/50 transition-all duration-300 scroll-animate">
                     <div
                         class="w-14 h-14 bg-gradient-to-br from-orange-500 to-yellow-500 rounded-xl flex items-center justify-center text-2xl mb-4 group-hover:scale-110 transition-transform duration-300">
-                        🔥
+                        <i class="fab fa-html5"></i>
                     </div>
                     <h3 class="font-semibold mb-1">HTML5</h3>
                     <p class="text-sm text-gray-400">Semantic Web</p>
                 </div>
 
+                <!-- CSS3 -->
                 <div
                     class="skill-card group p-6 bg-dark-900/50 backdrop-blur border border-white/10 rounded-2xl hover:border-blue-500/50 transition-all duration-300 scroll-animate">
                     <div
                         class="w-14 h-14 bg-gradient-to-br from-blue-500 to-cyan-500 rounded-xl flex items-center justify-center text-2xl mb-4 group-hover:scale-110 transition-transform duration-300">
-                        🎨
+                        <i class="fab fa-css3-alt"></i>
                     </div>
                     <h3 class="font-semibold mb-1">CSS3</h3>
                     <p class="text-sm text-gray-400">Styling Expert</p>
                 </div>
 
+                <!-- JavaScript -->
                 <div
                     class="skill-card group p-6 bg-dark-900/50 backdrop-blur border border-white/10 rounded-2xl hover:border-yellow-500/50 transition-all duration-300 scroll-animate">
                     <div
                         class="w-14 h-14 bg-gradient-to-br from-yellow-400 to-yellow-600 rounded-xl flex items-center justify-center text-2xl mb-4 group-hover:scale-110 transition-transform duration-300">
-                        ⚡
+                        <i class="fab fa-js-square"></i>
                     </div>
                     <h3 class="font-semibold mb-1">JavaScript</h3>
                     <p class="text-sm text-gray-400">ES6+ Expert</p>
                 </div>
 
+                <!-- React -->
                 <div
                     class="skill-card group p-6 bg-dark-900/50 backdrop-blur border border-white/10 rounded-2xl hover:border-cyan-500/50 transition-all duration-300 scroll-animate">
                     <div
                         class="w-14 h-14 bg-gradient-to-br from-cyan-400 to-blue-500 rounded-xl flex items-center justify-center text-2xl mb-4 group-hover:scale-110 transition-transform duration-300">
-                        ⚛️
+                        <i class="fab fa-react"></i>
                     </div>
                     <h3 class="font-semibold mb-1">React</h3>
                     <p class="text-sm text-gray-400">Frontend Framework</p>
                 </div>
 
+                <!-- Node.js -->
                 <div
                     class="skill-card group p-6 bg-dark-900/50 backdrop-blur border border-white/10 rounded-2xl hover:border-green-500/50 transition-all duration-300 scroll-animate">
                     <div
                         class="w-14 h-14 bg-gradient-to-br from-green-400 to-emerald-600 rounded-xl flex items-center justify-center text-2xl mb-4 group-hover:scale-110 transition-transform duration-300">
-                        🟢
+                        <i class="fab fa-node-js"></i>
                     </div>
                     <h3 class="font-semibold mb-1">Node.js</h3>
                     <p class="text-sm text-gray-400">Backend Runtime</p>
                 </div>
 
+                <!-- MongoDB -->
                 <div
                     class="skill-card group p-6 bg-dark-900/50 backdrop-blur border border-white/10 rounded-2xl hover:border-cyan-500/50 transition-all duration-300 scroll-animate">
                     <div
                         class="w-14 h-14 bg-gradient-to-br from-cyan-500 to-teal-400 rounded-xl flex items-center justify-center text-2xl mb-4 group-hover:scale-110 transition-transform duration-300">
-                        🗄️
+                        <i class="fas fa-database"></i>
                     </div>
                     <h3 class="font-semibold mb-1">MongoDB</h3>
                     <p class="text-sm text-gray-400">NoSQL Database</p>
                 </div>
 
+                <!-- Tailwind -->
                 <div
                     class="skill-card group p-6 bg-dark-900/50 backdrop-blur border border-white/10 rounded-2xl hover:border-sky-500/50 transition-all duration-300 scroll-animate">
                     <div
                         class="w-14 h-14 bg-gradient-to-br from-sky-400 to-blue-600 rounded-xl flex items-center justify-center text-2xl mb-4 group-hover:scale-110 transition-transform duration-300">
-                        🌊
+                        <i class="fas fa-wind"></i>
                     </div>
                     <h3 class="font-semibold mb-1">Tailwind</h3>
                     <p class="text-sm text-gray-400">CSS Framework</p>
                 </div>
 
+                <!-- Git -->
                 <div
                     class="skill-card group p-6 bg-dark-900/50 backdrop-blur border border-white/10 rounded-2xl hover:border-orange-500/50 transition-all duration-300 scroll-animate">
                     <div
                         class="w-14 h-14 bg-gradient-to-br from-orange-500 to-red-500 rounded-xl flex items-center justify-center text-2xl mb-4 group-hover:scale-110 transition-transform duration-300">
-                        🔶
+                        <i class="fab fa-git-alt"></i>
                     </div>
                     <h3 class="font-semibold mb-1">Git</h3>
                     <p class="text-sm text-gray-400">Version Control</p>
